# kenya_sacco_sim

./: .gitignore  README.md  deep-research-report.md  kenya_sacco_sim_v_0_1_specification.md  kenya_sacco_sim_v_0_2_specification.md  kenya_sacco_sim_v_1_backlog.md  kenya_sacco_sim_v_1_specification.md  pyproject.toml  requirements-notebooks.txt
benchmarks/: KENYA_SACCO_SIM_scale_probe_results.json
benchmarks/KENYA_SACCO_SIM_v1_multi_seed/: multi_seed_results.json
config/: calendar.yaml  institutions.yaml  patterns.yaml  personas.yaml  products.yaml  typologies.yaml  validation.yaml  world.yaml
docs/: architecture.md  cli-reference.md  concepts.md  configuration.md  getting-started.md  index.md  outputs.md  typologies.md  validation.md
docs/release-notes/: v1-100k-benchmark.md
docs/research/: current-calibration-notes.md
kenya_sacco_sim/: __init__.py
notebooks/: 01_getting_started.ipynb  02_benchmark_walkthrough.ipynb  _apply_assumptions.py
notebooks/.ipynb_checkpoints/: 01_getting_started-checkpoint.ipynb
src/kenya_sacco_sim/: __main__.py  cli.py
src/kenya_sacco_sim/benchmark/: __init__.py  artifacts.py  baseline_rules.py  label_tables.py  ml_baseline.py  multi_seed.py
src/kenya_sacco_sim/core/: config.py  enums.py  id_factory.py  models.py  rules.py
src/kenya_sacco_sim/export/: csv.py
src/kenya_sacco_sim/generators/: accounts.py  devices.py  edges.py  guarantors.py  institutions.py  (+6 more)
tests/: test_baseline_rules.py  test_benchmark_hardening.py  test_ml_baseline.py  test_multi_seed_benchmark.py  test_v02_foundation.py  test_v1_typologies.py
(+10 files in other folders)
