[project]
name = "kenya-sacco-sim"
version = "0.2.0"
description = "Synthetic AML dataset generator for Kenyan SACCOs"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0", "scikit-learn>=1.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
